k8s/coma/apps/media/slskd/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: slskd
  namespace: media
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: coma-artichoke-network-https
  hostnames:
    - slskd.coma.artichoke.network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 120s
        backendRequest: 120s
      backendRefs:
        - name: slskd-main
          port: 5030
